--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "react-scripts test --transformIgnorePatterns",
     "preview": "vite preview"
   },
   "dependencies": {
     "eslint": "^8.32.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
+    "jest": "^29.3.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
